feat: add twitter

--- a/.env-example
+++ b/.env-example
@@ -4,6 +4,6 @@ CRAWLER_REPLICAS=1
 
 #crawling settings
 RUN_EVERY_HOUR=False
-SUBREDDITS=['1', '2']
-TWITTERPROFILES=['1', '2']
-TWITTERHASTAGS=['1', '2']
+SUBREDDITS=['Showerthoughts']
+TWITTER_PROFILES=['scrapingdog']
+TWITTER_HASTAGS=['LaVeladaDelAnoIV']
